# v11y

./: .release-please-manifest.json  Cargo.toml  GEMINI.md  LICENSE  README.md  release-please-config.json
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
docs/: astro.config.mjs  package.json  pnpm-lock.yaml
docs/public/: CNAME
docs/src/components/: posthog.astro
docs/src/pages/: index.astro
src/: audit.rs  cli.rs  main.rs  model.rs  risk.rs  terminal.rs  tui.rs
tests/fixtures/: npm-audit.json
v11y/: CHANGELOG.md  Cargo.toml
v11y-core/: Cargo.toml
v11y-core/src/: lib.rs  model.rs  risk.rs
v11y-core/src/provider/: mod.rs
v11y-core/src/provider/npm/: mod.rs  model.rs
v11y-core/src/provider/yarn/: mod.rs  model.rs
v11y-core/tests/fixtures/: yarn-audit.json  yarn-berry-audit.json  yarn-v3-audit.json
v11y/src/: audit.rs  cli.rs  main.rs  terminal.rs  tui.rs
v11y/src/tui/: app.rs  mod.rs  render.rs
